--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,42 @@
-.App {
+header {
+  margin-top: 0;
+  border: 3px black solid;
+}
+
+nav {
+  background-color: #282c34;
+  min-height: 15vh;
+}
+
+li {
+  list-style-type: none;
+  width: 150px;
+  text-align: center;
+}
+li:hover {
+  background-color: darkcyan;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  align-items: end;
+  margin-top: 75px;
+  border: 3px black solid;
+}
+
+h1 {
+  color:aliceblue;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section {
+  background-color: darkgray;
 }
