--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 header {
   margin-top: 0;
   border: 3px black solid;
+  border-bottom: none;
 }
 
 nav {
@@ -26,6 +27,8 @@ ul {
   align-items: end;
   margin-top: 75px;
   border: 3px black solid;
+  border-left: none;
+  border-right: none;
 }
 
 h1 {
