--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,7 @@ li {
   width: 150px;
   text-align: center;
 }
+
 li:hover {
   background-color: darkcyan;
 }
@@ -42,4 +43,8 @@ body {
 
 section {
   background-color: darkgray;
+}
+
+p, label {
+  color: white;
 }
