--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,26 @@ li:hover {
   background-color: darkcyan;
 }
 
+.sleep-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+.sleep-table {
+  width: 80%;
+  text-align: center;
+}
+table {
+  border-spacing: 30px;
+}
+
+td {
+  border: 1px black solid;
+  padding: 50px;
+}
+
 ul {
   display: flex;
   flex-direction: row;
