--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+/* stylelint-disable font-family-name-quotes */
+/* stylelint-disable font-family-no-missing-generic-family-keyword */
+
+/* -webkit-box-reflect: below 1px linear-gradient(transparent, #0005); */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 header {
   margin-top: 0;
   border: 3px black solid;
@@ -13,10 +19,17 @@ nav {
   list-style-type: none;
   width: 150px;
   text-align: center;
+  text-transform: uppercase;
+  font-family: "Roboto";
+  color: #03e9f4;
+  cursor: pointer;
 }
 
 .navigation > li:hover {
-  background-color: darkcyan;
+  background-color: #03e9f4;
+  color: #212121;
+  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+  0 0 200px #03e9f4;
 }
 
 .sleep-container {
@@ -30,6 +43,7 @@ nav {
   width: 80%;
   text-align: center;
 }
+
 table {
   border-spacing: 30px;
 }
@@ -48,7 +62,6 @@ td:hover {
   flex-direction: row;
   justify-content: space-between;
   font-size: calc(10px + 2vmin);
-  color: white;
   align-items: end;
   margin-top: 75px;
   border: 3px black solid;
