--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,12 +6,12 @@
 
 header {
   margin-top: 0;
-  border: 3px black solid;
+  border: 1px rgb(222, 59, 255) solid;
   border-bottom: none;
+  background-color: #3a0b468c;
 }
 
 nav {
-  background-color: #282c34;
   min-height: 15vh;
 }
 
@@ -49,7 +49,7 @@ table {
 }
 
 td {
-  border: 1px black solid;
+  border: 1px rgb(0, 204, 255) solid;
   padding: 50px;
 }
 
@@ -64,24 +64,68 @@ td:hover {
   font-size: calc(10px + 2vmin);
   align-items: end;
   margin-top: 75px;
-  border: 3px black solid;
+  border: 3px rgb(248, 73, 225) solid;
   border-left: none;
   border-right: none;
 }
-
-h1 {
-  color:aliceblue;
+nav > h1 {
   text-align: center;
 }
 
+#title {
+  color:rgb(222, 59, 255);
+  font-family:'Ms Madi', sans-serif;
+  font-weight: 400;
+  font-size: 45px;
+  font-style: normal;
+  cursor: pointer;
+}
+
+#title:hover {
+  background-color: rgb(222, 59, 255);
+  color: #212121;
+  box-shadow: 0 0 5px rgb(222, 59, 255), 0 0 25px rgb(222, 59, 255), 0 0 50px rgb(222, 59, 255),
+    0 0 100px rgb(222, 59, 255);;
+}
+
 body {
-  background-color: #282c34;
+  background-color: #000000;
 }
 
 section {
-  background-color: darkgray;
+  background-color: rgb(0, 0, 0);
+  color:aqua;
+  border: 1px rgb(0, 204, 255) solid;
+}
+
+.homeItems {
+  padding-top: 55px;
+  padding-bottom: 55px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.homeItems > li {
+  color:rgb(63, 194, 255);
+  list-style-type: none;
+  cursor: pointer;
+  font-size: 20px;
+  border:rgb(0, 204, 255) 1px  solid; 
+  padding: 20px;
+  text-transform: uppercase;
+}
+
+.homeItems > li:hover {
+  background-color:rgb(63, 194, 255);
+  color:rgb(0, 0, 0);
+  list-style-type: none;
+  cursor: pointer;
+  font-size: 20px;
+  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+  0 0 200px #03e9f4;
 }
 
 p, label {
-  color: white;
+  color: rgb(137, 166, 245);
 }
