--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,30 +32,7 @@ nav {
     0 0 100px #03e9f4;
 }
 
-.sleep-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50vh;
-}
 
-.sleep-table {
-  width: 80%;
-  text-align: center;
-}
-
-table {
-  border-spacing: 30px;
-}
-
-td {
-  border: 1px rgb(0, 204, 255) solid;
-  padding: 50px;
-}
-
-td:hover {
-  background-color: darkcyan;
-}
 
 .navigation  {
   display: flex;
@@ -94,7 +71,8 @@ body {
 
 section {
   background-color: rgb(0, 0, 0);
-  color:aqua;
+  color:rgb(103, 177, 182);
+  font-size: 20px;
   border: 1px rgb(0, 204, 255) solid;
 }
 
@@ -127,5 +105,10 @@ section {
 }
 
 p, label {
-  color: rgb(137, 166, 245);
+  color: rgba(215, 235, 231, 0.829);
+  font-size: 20px;
+}
+
+.infoLi > li {
+  color: rgba(215, 235, 231, 0.829);
 }
