--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,7 @@ section {
   color:rgb(103, 177, 182);
   font-size: 20px;
   border: 1px rgb(0, 204, 255) solid;
+  border-bottom: 0px;
 }
 
 .homeItems {
