--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@ header {
   margin-top: 0;
   border: 1px rgb(222, 59, 255) solid;
   border-bottom: none;
-  background-color: #3a0b468c;
+  background-color: #3a0b46b6;
 }
 
 nav {
@@ -68,7 +68,7 @@ body {
 }
 
 section {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(7, 3, 66, 0.459);
   color:rgb(103, 177, 182);
   font-size: 20px;
   border: 1px rgb(0, 204, 255) solid;
