--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,15 +4,85 @@
 /* -webkit-box-reflect: below 1px linear-gradient(transparent, #0005); */
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+html{
+  height: 100%
+}
+
+body {
+  height: 100%;
+  background-color: black;
+}
+
+#root{
+  height: 100%
+}
+
+#root > div{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+section {
+  flex: auto;
+  background-color: rgba(7, 3, 66, 0.459);
+  color:rgb(103, 177, 182);
+  font-size: 20px;
+  border: 1px rgb(0, 204, 255) solid;
+}
+
 header {
-  margin-top: 0;
   border: 1px rgb(222, 59, 255) solid;
   border-bottom: none;
   background-color: #3a0b46b6;
+
+  display: flex;
+  flex-direction: column;
 }
 
 nav {
   min-height: 15vh;
+  display: flex;
+  flex-direction: column;
+}
+
+nav > h1 {
+  text-align: center;
+  margin: 0;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#title {
+  color:rgb(222, 59, 255);
+  font-family:'Ms Madi', sans-serif;
+  font-weight: 400;
+  font-size: 45px;
+  font-style: normal;
+  cursor: pointer;
+}
+
+#title:hover {
+  padding: 0 2%;
+  background-color: rgb(222, 59, 255);
+  border-radius: 30px;
+  color: #212121;
+  box-shadow: 0 0 10px rgb(222, 59, 255), 0 0 50px rgb(222, 59, 255), 0 0 75px rgb(222, 59, 255),
+    0 0 100px rgb(222, 59, 255);;
+}
+
+.navigation  {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 21px;
+  align-items: flex-end;
+  border: 3px rgb(248, 73, 225) solid;
+  border-left: none;
+  border-right: none;
+  margin: 0;
 }
 
 .navigation > li {
@@ -30,41 +100,6 @@ nav {
   color: #212121;
   box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
     0 0 100px #03e9f4;
-}
-
-.navigation  {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  font-size: 21px;
-  align-items: flex-end;
-  border: 3px rgb(248, 73, 225) solid;
-  border-left: none;
-  border-right: none;
-}
-
-nav > h1 {
-  text-align: center;
-}
-
-#title {
-  color:rgb(222, 59, 255);
-  font-family:'Ms Madi', sans-serif;
-  font-weight: 400;
-  font-size: 45px;
-  font-style: normal;
-  cursor: pointer;
-}
-
-#title:hover {
-  background-color: rgb(222, 59, 255);
-  color: #212121;
-  box-shadow: 0 0 5px rgb(222, 59, 255), 0 0 25px rgb(222, 59, 255), 0 0 50px rgb(222, 59, 255),
-    0 0 100px rgb(222, 59, 255);;
-}
-
-body {
-  background-color: #000000;
 }
 
 section {
