--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,12 +23,15 @@ body {
   flex-direction: column;
 }
 
-section {
+main {
   flex: auto;
   background-color: rgba(7, 3, 66, 0.459);
   color:rgb(103, 177, 182);
   font-size: 20px;
   border: 1px rgb(0, 204, 255) solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 header {
@@ -76,13 +79,14 @@ nav > h1 {
 .navigation  {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: 21px;
   align-items: flex-end;
   border: 3px rgb(248, 73, 225) solid;
   border-left: none;
   border-right: none;
   margin: 0;
+  padding: 0;
 }
 
 .navigation > li {
@@ -98,15 +102,9 @@ nav > h1 {
 .navigation > li:hover {
   background-color: #03e9f4;
   color: #212121;
+  border-radius: 30px;
   box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
     0 0 100px #03e9f4;
-}
-
-section {
-  background-color: rgba(7, 3, 66, 0.459);
-  color:rgb(103, 177, 182);
-  font-size: 20px;
-  border: 1px rgb(0, 204, 255) solid;
 }
 
 .homeItems {
@@ -153,10 +151,6 @@ padding-top: 10px;
   width: 350px;
   height: 310px;
   text-align: center;
-}
-
-#source {
-  font-size: 11px;
 }
 
 a {
