--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -1,10 +1,10 @@
-button {
+#dream-submit {
   width: 10%;
   align-self: end;
   margin-right: 10%;
 }
 
-textarea {
+#dream-desc {
   min-height: 250px;
   width: 80%;
   align-self: center;
@@ -12,14 +12,14 @@ textarea {
   background-color: #B4D2DC;
 }
 
-input {
+#dreams > form > input {
   width: 30%;
   margin-bottom: 1%;
   margin-left: 9.5%;
   background-color: #B4D2DC;
 }
 
-form {
+#dreams > form {
   display: flex;
   flex-direction: column;
 }
