--- a/client/src/components/dietComponents/Diet.css
+++ b/client/src/components/dietComponents/Diet.css
@@ -1,3 +1,9 @@
 #diet-container{
-    margin: 5px 25px;
+    margin: 5px 0;
+    display : flex;
+    justify-content: center;
+}
+
+#diet-container > div{
+    width: 50%
 }
