--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -23,3 +23,14 @@
   display: flex;
   flex-direction: column;
 }
+
+.tarot {
+  width: 20%;
+  height: auto;
+}
+
+#tarot-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
