--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -27,10 +27,12 @@
 .tarot {
   width: 20%;
   height: auto;
+  margin-bottom: 2%;
 }
 
-#tarot-section {
+#fortune-telling {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
