--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -25,7 +25,7 @@
 }
 
 .tarot {
-  width: 20%;
+  width: 15%;
   height: auto;
   margin-bottom: 2%;
 }
@@ -35,4 +35,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.img-desc-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tarot-desc {
+  width: 30%;
+  margin-left: 5%;
 }
