Fix styling for card

--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -25,10 +25,12 @@
 }
 
 .tarot {
-  width: 15%;
+  display: block;
+  max-height:250px;
+  width: auto;
   height: auto;
   margin-bottom: 2%;
-}
+} 
 
 #fortune-telling {
   display: flex;
