Add bolding text in dream description

--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -10,6 +10,9 @@
   align-self: center;
   margin-bottom: 2%;
   background-color: #B4D2DC;
+  text-align:start;
+  color: black;
+  font-size: 0.8em;
 }
 
 #dreams > form > input {
