--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,14 @@ nav > h1 {
   0 0 200px #03e9f4;
 }
 
+#spd:hover {
+  background-color: #ff0000;
+  color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 0 5px #ff0000, 0 0 25px #ff0000, 0 0 50px #ff0000,
+    0 0 100px #ff0000;
+}
+
 p, label {
   color: rgb(215 235 231 / 82.9%);
   font-size: 20px;
