--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -62,7 +62,26 @@
 
 .styling-names button {
   margin-right: 1%;
-  background-color: rgb(222 59 255);
+  background-color: rgb(104, 8, 123);
   border-radius: 5px;
   border-width: 0;
+  color: #B4D2DC;
+}
+
+.tarot-button {
+  color:rgb(63 194 255);
+  cursor: pointer;
+  font-size: 16px; 
+  padding: 10px;
+  background-color: #3a0b46b6;
+  border-radius: 30px;
+  border-width: 0;
+}
+
+.tarot-button:hover {
+  background-color: #03e9f4;
+  color: #212121;
+  border-radius: 30px;
+  box-shadow: 0 0 5px #03e9f4, 0 0 13px #03e9f4, 0 0 25px #03e9f4,
+    0 0 100px #03e9f4;
 }
