--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -85,3 +85,13 @@
   box-shadow: 0 0 5px #03e9f4, 0 0 13px #03e9f4, 0 0 25px #03e9f4,
     0 0 100px #03e9f4;
 }
+
+#dream-submit {
+  color:rgb(63 194 255);
+  cursor: pointer;
+  font-size: 16px; 
+  padding: 10px;
+  background-color: rgb(104, 8, 123);
+  border-radius: 30px;
+  border-width: 0;
+}
