--- a/client/src/components/sleepComponents/SleepMetrics.css
+++ b/client/src/components/sleepComponents/SleepMetrics.css
@@ -29,7 +29,7 @@
     flex-direction: column;
 }
 
-#input-column > input, #input-column > textarea{
+#input-column > input, #input-column > textarea, #week-picker{
     margin: 2px 0;
     border: solid 1px rgb(103 177 182);
     background-color:  	#17236a;
