Css changes for consistency

--- a/client/src/components/profileComponents/profile.css
+++ b/client/src/components/profileComponents/profile.css
@@ -5,7 +5,7 @@
 
 #profile-box{
     width: 40%;
-    background-color: #C0C0C0;
+    background-color: #B4D2DC;
     border: solid 3px rgb(103 177 182);
     border-radius: 30px;
     padding: 20px;
