--- a/client/src/components/signupComponents/Signup.css
+++ b/client/src/components/signupComponents/Signup.css
@@ -42,7 +42,6 @@
 
 #input-container > input{
     border: solid 1px rgb(103 177 182);
-    background-color:  	#17236a;
-    color: white;
+    background-color: #B4D2DC;
     margin: 7px 0;
 }
