--- a/client/src/components/sleepComponents/SleepMetrics.css
+++ b/client/src/components/sleepComponents/SleepMetrics.css
@@ -32,8 +32,7 @@
 #input-column > input, #input-column > textarea, #week-picker{
     margin: 2px 0;
     border: solid 1px rgb(103 177 182);
-    background-color:  	#17236a;
-    color: white;
+    background-color: #B4D2DC;
 }
 
 #sleep-metrics-container{
