--- a/client/src/components/dreamComponents/Dream.css
+++ b/client/src/components/dreamComponents/Dream.css
@@ -2,6 +2,13 @@
   width: 10%;
   align-self: end;
   margin-right: 10%;
+  color:rgb(63 194 255);
+  cursor: pointer;
+  font-size: 16px; 
+  padding: 10px;
+  background-color: rgb(104 8 123);
+  border-radius: 30px;
+  border-width: 0;
 }
 
 #dream-desc {
@@ -62,7 +69,7 @@
 
 .styling-names button {
   margin-right: 1%;
-  background-color: rgb(104, 8, 123);
+  background-color: rgb(104 8 123);
   border-radius: 5px;
   border-width: 0;
   color: #B4D2DC;
@@ -85,16 +92,6 @@
   border-radius: 30px;
   box-shadow: 0 0 5px #03e9f4, 0 0 13px #03e9f4, 0 0 25px #03e9f4,
     0 0 100px #03e9f4;
-}
-
-#dream-submit {
-  color:rgb(63 194 255);
-  cursor: pointer;
-  font-size: 16px; 
-  padding: 10px;
-  background-color: rgb(104, 8, 123);
-  border-radius: 30px;
-  border-width: 0;
 }
 
 .past-dreams {
