--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,11 +132,11 @@ nav > h1 {
 }
 
 #spd:hover {
-  background-color: #ff0000;
-  color: #ffffff;
+  background-color: #f00;
+  color: #fff;
   border-radius: 30px;
-  box-shadow: 0 0 5px #ff0000, 0 0 25px #ff0000, 0 0 50px #ff0000,
-    0 0 100px #ff0000;
+  box-shadow: 0 0 5px #f00, 0 0 25px #f00, 0 0 50px #f00,
+    0 0 100px #f00;
 }
 
 p, label {
