--- a/client/src/components/spdComponents/Spd.css
+++ b/client/src/components/spdComponents/Spd.css
@@ -1,10 +1,55 @@
 .leaflet-container {
-    width: 75%;
-    height: 100vh;
-  }
+  width: 85%;
+  height: 100vh;
+}
 
-  #map {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-  }
+#map {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+#spd-form-container{
+  display: flex;
+  justify-content: center;
+}
+
+#spd-form-container > fieldset{
+  width: 30%;
+  border-color: rgb(103 177 182);
+}
+
+#spd-form-container > fieldset > legend{
+  color: rgb(103 177 182);
+  margin: auto
+}
+
+#spd-form{
+  display: flex;
+}
+
+#spd-form > #label-column{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#spd-form > #input-column{
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+#input-column > input, #input-column > textarea, select{
+  margin: 2px 0;
+  border: solid 1px rgb(103 177 182);
+  background-color:  	#17236a;
+  color: white;
+}
+
+#spd-form-buttons{
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+}
