--- a/client/src/components/spdComponents/Spd.css
+++ b/client/src/components/spdComponents/Spd.css
@@ -53,3 +53,16 @@
   display: flex;
   justify-content: center;
 }
+
+span {
+  color: rgb(175, 0, 0);
+}
+
+#entered-spd {
+  width: 50%;
+}
+
+#entered-spd > li {
+  border: 1px solid rgb(117, 30, 30);
+  padding: 10px;
+}
