--- a/client/src/components/spdComponents/Spd.css
+++ b/client/src/components/spdComponents/Spd.css
@@ -55,14 +55,16 @@
 }
 
 span {
-  color: rgb(175, 0, 0);
+  color: rgb(209, 139, 139);
 }
 
 #entered-spd {
   width: 50%;
+  margin: 0 auto; 
 }
 
 #entered-spd > li {
-  border: 1px solid rgb(117, 30, 30);
+  border: 1px solid rgb(114, 100, 100);
   padding: 10px;
+  list-style-type: none;
 }
