--- a/client/src/components/spdComponents/Spd.css
+++ b/client/src/components/spdComponents/Spd.css
@@ -54,11 +54,19 @@
   justify-content: center;
 }
 
-span {
-  color: rgb(209, 139, 139);
-}
-
 #entered-spd {
   width: 50%;
   margin: 0 auto; 
+}
+
+.green {
+  color: green;
+}
+
+.orange {
+  color: orange;
+}
+
+.red {
+  color: red;
 }
