--- a/client/src/components/spdComponents/Spd.css
+++ b/client/src/components/spdComponents/Spd.css
@@ -60,6 +60,10 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+details > p {
+  text-align: center;
+}
+
 .green {
   color: green;
 }
